[client] Fix overflow problem on HeaderSearch component

--- a/client/src/components/HeaderSearch/index.less
+++ b/client/src/components/HeaderSearch/index.less
@@ -3,12 +3,14 @@
 @pro-header-hover-bg: rgba(0, 0, 0, 0.025);
 
 .headerSearch {
+
 	:global(.anticon-search) {
+		margin-right: 10px;
 		font-size: 16px;
 		cursor: pointer;
 	}
+
 	.input {
-		margin-right: 12px;
 		width: 0;
 		background: transparent;
 		border-radius: 0;
@@ -48,13 +50,12 @@
 			box-shadow: none !important;
 		}
 		&,
-		&:hover,
 		&:focus {
 			border-bottom: 1px solid @border-color-base;
 		}
 		&.show {
 			width: 210px;
-			margin-left: 8px;
+			margin-left: 125px;
 		}
 	}
 }
